Added a donate link!

--- a/index.html
+++ b/index.html
@@ -126,11 +126,8 @@
 		<tr>
 			<td id="about_c">
 				<div id="about">
-					<p><button onclick="show_credits()">Credits</button></p>
+					<p><button onclick="show_credits()">Credits</button>&nbsp;<a href="http://donate.joezeng.com/" target="_blank"><button>Donate</button></a></p>
 					<p>Goomy Clicker <span class="version"></span></p>
-					<p class="small">Donate cryptocurrencies<br />
-					Bitcoin: 133AsgJZfWdeXCTJ5dMXpoyYkiv426WLhW<br />
-					Peercoin: PXeceJ6we5ojghBdVpjF1XEFGzfuM4VSM5</p>
 				</div>
 			</td>
 		</tr>
