MAJOR changes to the scale formulas.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 <script type="text/javascript" src="goomyclicker.js"></script>
 <script type="text/javascript" src="saveload.js"></script>
 
+<script type="text/javascript" src="scale/weight.js"></script>
+<script type="text/javascript" src="scale/length.js"></script>
+<script type="text/javascript" src="scale/volume.js"></script>
 <script type="text/javascript" src="scale.js"></script>
 
 <script type="text/javascript">
@@ -103,7 +106,7 @@
 						<p>Number of Goomies: <span id="info_goomycount" class="indicator"></span></p>
 
 						<p>Total space your Goomies fill: <b><span id="total_volume"></span></b><br />
-						Your swath of Goomies could occupy <span id="volume_comparison" class="indicator"></span>.</p>
+						Your swath of Goomies could <span id="volume_comparison" class="indicator"></span>.</p>
 
 						<p>Total mass of your Goomies: <b><span id="total_weight"></span></b><br />
 						Your swath of Goomies weighs as much as <span id="weight_comparison" class="indicator"></span>.</p>
