A few bugfixes for the previous commit.

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					<div id="stats">
 						<span class="dialog_header">STATS</span>
 						<div>Level <span id="level">1</span> <progress id="expbar" max="100" value="0"></progress></div>
-						<p>If your swath of Goomies were laid out end to end, they would stretch <span id="length_comparison" class="indicator"></span>.</p>
+						<p>If your swath of Goomies were laid out end to end, they would stretch <span id="comparison" class="indicator"></span>.</p>
 					</div>
 
 					<!-- begin panels -->
@@ -104,6 +104,9 @@
 					<div id="info" class="panel">
 						<span class="dialog_header">INFORMATION</span>
 						<p>Number of Goomies: <span id="info_goomycount" class="indicator"></span></p>
+
+						<p>Total length your Goomies line up to: <b><span id="total_length"></span></b><br />
+						If your swath of Goomies were laid out end to end, they would stretch <span id="length_comparison" class="indicator"></span>.</p>
 
 						<p>Total space your Goomies fill: <b><span id="total_volume"></span></b><br />
 						Your swath of Goomies could <span id="volume_comparison" class="indicator"></span>.</p>
