Added a link to my Indiegogo.

--- a/index.html
+++ b/index.html
@@ -133,8 +133,9 @@
 			<td id="about_c">
 				<div id="about">
 					<p><button onclick="show_credits()">Credits</button>&nbsp;<a href="http://donate.joezeng.com/" target="_blank"><button>Donate</button></a></p>
-					<p>Goomy Clicker <span class="version"></span></p>
+					<p>I'm making a new game! Please help me support it!</p>
 				</div>
+				<iframe src="https://www.indiegogo.com/project/pushe/embedded/3435568" width="222px" height="445px" frameborder="0" scrolling="no"></iframe>
 			</td>
 		</tr>
 
