--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
 				</div>
 				<div id="upgrade_bar">
 				</div>
+
+				<div style="background-color: #141414; color: #e9e9e9; padding: 14px 20px; border-radius: 4px;">
+					<p style="font-size: 125%;"><a href="http://joezeng.github.io/gc2/" style="color: #ffd700; text-decoration: none;">Goomy Clicker 2</a> is out! <br /></p>
+					It's got slightly more artwork, improved design, and lots of stuff to discover!
+				</div>
 			</td>
 
 			<td id="centre_c" rowspan="2">
