--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 
 <link rel="stylesheet" href="goomyclicker.css" />
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> -->
 
+<script type="text/javascript" src="jquery.js"></script>
 <script type="text/javascript" src="sprintf.min.js"></script>
 
 <script type="text/javascript" src="about.js"></script>
@@ -22,7 +23,7 @@
 <script type="text/javascript" src="scale/length.js"></script>
 <script type="text/javascript" src="scale/volume.js"></script>
 <script type="text/javascript" src="scale.js"></script>
-
+<!--
 <script type="text/javascript">
 
 	var _gaq = _gaq || [];
@@ -36,6 +37,7 @@
 	})();
 
 </script>
+-->
 </head>
 
 
